# catalyst-lab

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  architecture.mmd  namespace.yaml  pyproject.toml  verify-observability-stack.sh
.github/workflows/: ci.yml  codeql.yml
diagrams/: lab-architecture.md
grafana/: README.md
guidellm/: README.md  benchmark-job.yaml  namespace.yaml  pvc.yaml
istio/: README.md  istio-values.yaml  servicemonitor.yaml  vllm-serviceentry.yaml
jaeger/: README.md  config.yaml  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
kagenti/: authz-policies.yaml
kiali/: README.md  ingress.yaml  kiali-values.yaml
kserve/: README.md
llamastack/: Containerfile  README.md  llamastack-config.yaml  llamastack.yaml
mlflow/: README.md  deployment.yaml  ingress.yaml  otel-collector-config.yaml  otel-collector.yaml  pvc.yaml  service.yaml
mlflow-enrichment-archived/: README.md
open-webui/: README.md
otel-collector/: README.md  otel-collector.yaml
pgvector/: README.md  cluster.yaml
project-golem/: GolemServer.py  WIKIPEDIA_INGESTION.md  ingest-job.yaml  ingest.py  requirements.txt  wikipedia_loader.py
scripts/: check-sensitive-data.py  guidellm_to_mlflow.py
tests/: test_check_sensitive_data.py
