[project]
name = "catalyst-lab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "flask-cors",
    "numpy",
    "psycopg2-binary",
    "pgvector",
    "pyyaml",
    "requests",
    "scikit-learn",
    "umap-learn",
    "wikipedia-api",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pylint",
    "ruff",
]
mlflow = [
    "mlflow",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["project-golem", "scripts", "mlflow-enrichment-archived"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["project-golem", "scripts"]

[tool.pylint.main]
max-line-length = 100

[tool.pylint."messages control"]
disable = ["C0111"]
